# stm32-NUCLEO-F303K8

./: Cargo.toml  Drone.toml  Justfile  README.md
src/: bin.rs  consts.rs  lib.rs  thr.rs
src/drv/: common.rs  exti.rs  flash.rs  gpio.rs  hsi.rs  lse.rs  mod.rs  pll.rs  rcc.rs
src/periph/: flash.rs  hsi.rs  lse.rs  mod.rs  pll.rs  rcc.rs
src/sys/: gpio_pins.rs  mod.rs  system.rs
src/tasks/: root.rs
