cargo-features = ["resolver"]

[package]
name = "f303-blinky"
version = "0.1.0"
authors = ["alfredch <alfred.keller@centosa.ch>"]
edition = "2018"
#resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "f303-blinky"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    "futures/std",
]
heaptrace = ["drone-core/heaptrace"]

[dependencies]
drone-core = { version = "0.13.0" }
drone-cortexm = { version = "0.13.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"] }
drone-stm32-map = { version = "0.13.0", features = ["dma", "exti", "gpio", "i2c", "rtc", "spi", "tim", "uart"] }
futures = { version = "0.3.0", default-features = false }
typenum = "1.12"

[profile.release]
lto = true
debug = true
panic = "abort"
